fix hero on mobile

--- a/src/HomePage/HeroSection/HeroSection.css
+++ b/src/HomePage/HeroSection/HeroSection.css
@@ -6,6 +6,7 @@
     --bg: var(--bg-primary);
     position: relative;
     width: 100%;
+    height: 350vh;
     background-color: var(--bg-primary);
     overflow-x: hidden;
 }
